Updated changes to navbar alignment issues

--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@
   font-family: YaHei;
   color: white;
   font-weight: bold;
-  margin: 15px 0px 15px 0px;
 }
 
 p {
@@ -34,14 +33,17 @@ input, textarea, code, span, ::placeholder {
 h1{
   font-size: 72px;
   text-transform: uppercase;
+  margin: 0;
 }
 
 h2{
   font-size: 48px;
+  margin: 0;
 }
 
 h3{
   font-size: 30px;
+  margin: 0;
 }
 
 h4{
@@ -97,11 +99,34 @@ form{
 /*
   FLEX-BOX related -------------------
 */
+.box{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+}
+.max{
+  width: 100vw;
+  height: 100vh;
+}
+.half{
+  height: 50vh;
+}
+
+div.max{
+  background-color:#90c947;
+}
+
+div.max:nth-child(even){
+  background-color: #85c138;
+}
 div.wrapper{
   width: 100vw;
   height: auto;
   display: flex;
   flex-direction: column;
+  margin: 0;
+  padding: 0;
 }
 
 div.container{
@@ -183,9 +208,11 @@ button{
   padding: 10px;
   margin: 15px 0px 15px 0px;
   box-shadow: 0px 0px 10px #82b540;
+  text-transform: uppercase;
 }
-button > h4{
-    margin: 0;
+button:hover{
+  background-color: #E46A6c;
+  cursor:pointer;
 }
 
 
@@ -238,24 +265,28 @@ div.button:hover{
 }
 
 div.navbar{
-
   background-color: #90c947;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: row;
   width: 100%;
   height: 80px;
-  box-shadow: 0px 10px 20px #82b540;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-bottom-color: #82B741;
   position: fixed;
   z-index: 10;
   margin: 0px;
 }
 div.innerNavbar{
-  display: flex;
-  width: 30%;
-  justify-content: space-between;
+  display: inline-flex;
+  justify-content: center;
   align-items: center;
+}
 
+div.mobileNav{
+  display: none;
 }
 #headerLogo{
   width: 40px;
@@ -265,11 +296,18 @@ div.innerNavbar{
 
 
 /* navigation (to page, to id) link */
+.nav-item-container{
+  display: flex;
+  justify-content: center;
+  width: 100px;
+  margin: 0px 20px 0px 20px;
+}
 .nav-item{
+
   font-size: 20px;
   text-decoration: none;
   text-transform: uppercase;
-  margin: 0px 30px 0px 30px;
+
 }
 .nav-item:hover{
   color: #78a83B;
@@ -391,7 +429,7 @@ ion-icon.socials:hover{
 .totalContainer div {
   margin: 0 2em 0 0 ;
 }
-.totalContainer h4,h3 {
+.totalContainer h4, .totalContainer h3 {
   margin: 0.3rem 1rem;
 }
 
@@ -539,18 +577,42 @@ div.carousel > img:hover{
 }
 
 
-.checkout{
-  position: fixed;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  top: 0;
-  right: 0;
-  margin-right: 100px;
-  font-size: 40px;
-  height: 80px;
-}
 .checkout:hover{
   color: #78a83B;
   cursor: pointer;
+}
+.checkout{
+  font-size: 25px;
+
+}
+
+
+.footer{
+  width: 100vw;
+  height: 50vh;
+  background-color: #7AAf36;
+}
+
+a > ion-icon:hover{
+  color: #78a83B;
+}
+
+/*BREAKPOINT FOR MOBILE */
+@media only screen and (max-width: 768px){
+  div.mobileNav{
+    display: flex;
+    width: 90%;
+    height: 100%;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  div.innerNavbar{
+    display:none;
+  }
+
+  div.nav-item-container > a > ion-icon{
+    font-size: 40px;
+  }
+
 }
